--- a/Color-Flipper/hex.html
+++ b/Color-Flipper/hex.html
@@ -18,7 +18,7 @@
     </div>
     <main>
         <div class="continer">
-            <h1 class="title">Simple background color:
+            <h1 class="title">Hex background color:
                 <span class="color">
                     #fff
                 </span>
@@ -26,7 +26,7 @@
             <button class="btn-hero" id="btn">Click me</button>
         </div>
     </main>
-    <script src="script.js"></script>
+    <script src="hex.js"></script>
 </body>
 
 </html>
