--- a/Counter/index.html
+++ b/Counter/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Counter</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+
+    <div class="continer">
+        <h1>Counter</h1>
+
+        <span id="value">0</span>
+        <div class="btns">
+            <button class="decrease-btn">decrease</button>
+            <button class="reset-btn">reset</button>
+            <button class="increase-btn">increase</button>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
+
 </html>
