--- a/ReviewSection/index.html
+++ b/ReviewSection/index.html
@@ -29,7 +29,6 @@
             asperiores debitis incidunt, eius earum ipsam cupiditate libero?
             Iste, doloremque nihil?
           </p>
-          <!-- prev next buttons-->
           <div class="button-container">
             <button class="prev-btn">
               <i class="fas fa-chevron-left"></i>
@@ -38,12 +37,10 @@
               <i class="fas fa-chevron-right"></i>
             </button>
           </div>
-          <!-- random button -->
-          <button class="random-btn">surprise me</button>
+          <button class="random-btn">Explore!</button>
         </article>
       </section>
     </main>
-    <!-- javascript -->
     <script src="script.js"></script>
   </body>
 </html>
